--- a/.github/actions/echo-action/action.yml
+++ b/.github/actions/echo-action/action.yml
@@ -6,6 +6,7 @@ inputs:
     required: true
 runs:
   using: "composite"
+  shell: bash
   steps:
     - name: Run echo command
       run: echo "${{ inputs.message }}"
