--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,14 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+      
+      - name: AWS
+        uses: aws-actions@configure-aws-credentials@v4
+        with:
+          role-to-assume: sample
+          role-session-name: sample
+          audience: sample
+          aws-region: us-east-1
 
       - name: Run Echo Action
         uses: ./.github/actions/echo-action
