--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,3 +29,4 @@ jobs:
         uses: ./.github/actions/echo-action
         with:
           message: "Running on ${{ matrix.os }}"
+          sample: "blabla"
