--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
       #     audience: sample
       #     aws-region: us-east-1
       - name: Run Echo Action
-        uses: ./.github/actions/echo-action
+        uses: ./.github/actions/win
         with:
           message: "Running on ${{ matrix.os }}"
           sample: "blabla"
