--- a/.github/actions/win/action.yml
+++ b/.github/actions/win/action.yml
@@ -21,9 +21,11 @@ runs:
     #     python-version: 3.12.4
     - name: Set the value
       id: step_one
+      shell: pwsh
       run: |
         echo "action_state=yellow" | Out-File -FilePath $env:GITHUB_ENV -Append # no need for -Encoding utf8
     - name: Use the value
+      shell: pwsh
       id: step_two
       run: |
         echo "${{ env.action_state }}" # This will output 'yellow'
