--- a/.github/actions/win/action.yml
+++ b/.github/actions/win/action.yml
@@ -36,4 +36,4 @@ runs:
         echo "zip_name=desktop-${{ inputs.sample }}-${{ runner.arch }}.zip" | Out-File -FilePath $env:GITHUB_ENV -Append
     - name: Check name
       shell: pwsh
-      run: "${{ env.zip_name }}"
+      run: "echo ${{ env.zip_name }}"
