--- a/.github/actions/win/action.yml
+++ b/.github/actions/win/action.yml
@@ -50,6 +50,6 @@ runs:
       run: dir
     - name: sadasd
       shell: pwsh
-      run: Write-Output settings.json
+      run: Get-Content settings.json
       
       
